--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: "404: Page not found"
+title: "404: Zasób nie znaleziony"
 permalink: 404.html
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
+  <h1 class="page-title">404: Zasób nie znaleziony</h1>
+  <p>Coś poszło nie tak jak powinno i nie znaleźliśmy tego czego szukasz. <a href="/">Przejdź do strony głównej</a> i może wtedy się uda.</p>
 </div>
